--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "three": "^0.152.2",
     "usehooks-ts": "^2.9.1",
     "xstate": "^4.37.2"
