--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["node_modules", "src/utils/dtSocGroupLoader.ts", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
