--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.2",
     "@xstate/react": "^3.2.2",
     "axios": "^1.4.0",
+    "gsap": "^3.12.2",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
